--- a/test/_files/dot_notation.mustache
+++ b/test/_files/dot_notation.mustache
@@ -7,3 +7,6 @@
 <h2>Test truthy false values:</h2>
 <p>Zero: {{truthy.zero}}</p>
 <p>False: {{truthy.notTrue}}</p>
+<p>length of string should be rendered: {{price.currency.name.length}}</p>
+<p>length of string in a list should be rendered: {{#singletonList}}{{singletonItem.length}}{{/singletonList}}</p>
+<p>length of an array should be rendered: {{authors.length}}</p>
